additions for executing algorithm